--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
 
     <div class="card">
         <div style="position:relative">
-            <div class="name">RadhaKrishna</div>
+            <div class="name">Abhishek</div>
             <div class="heart-symbol"> &#10084;</div>
-            <div class="name">Rashni</div>
+            <div class="name">Vikshitha</div>
         </div>
     </div>
   
@@ -40,30 +40,30 @@
         <h1 class="sub-title">
             Glad to invite you to our Wedding ceremony</h1>
         <p>
-            on Sunday, December 18, 2022, 10:00 AM onwards
+            on Sunday, December 29, 2022, 11:30 AM onwards
         </p>
         <p>
-            Shri Krishna Sabha Bhavana, Anekere, Karkala
+            Sheshashayana Hall, Kidiyoor Hotel, Udupi
         </p>
-        <a href="/assets/inviatation/MEHENDI.png" download="Mehendi_Invitation | 16 DEC | Hope to see you there!">
+        <a href="/assets/inviatation/MEHENDI.png" download="Mehendi_Invitation | 27 DEC | Hope to see you there!">
             <button class="clickToShowInfo">
                 <h2>MEHENDI INVITATION</h2>
             </button>
           </a>
-          <a href="/assets/inviatation/marriage_invite.jpeg" download="Wedding_Invitation | 18 Dec | Hope to see you there!">
+          <a href="/assets/inviatation/marriage_invite.JPG" download="Wedding_Invitation | 29 Dec | Hope to see you there!">
             <button class="clickToShowInfo">
                 <h2>WEDDING INVITATION</h2>
             </button>
           </a>
           
           <div class="actions">
-            <a href="https://maps.app.goo.gl/sKHhteny2ZN3XkDe7" target="_blank">
+            <a href="https://maps.app.goo.gl/Br7RJe5xL4eyyvWHA?g_st=iw" target="_blank">
             <div class="venue">WEDDING VENUE</div>
           </a>
         </div> 
   
         <div class="actions">
-          <a href="https://maps.app.goo.gl/yw6zxphV2roXsrn7A" target="_blank">
+          <a href="https://maps.app.goo.gl/9VckdoAcxhs1nmZs8?g_st=iw" target="_blank">
             <div class="venue">MEHENDI VENUE</div>
           </a>
         </div>
